OO-3297: refactor the user management to use organization for managing the roles instead of named security groups